Creado mediante Colaboratory

--- a/Programacion_lineal_taller2.ipynb
+++ b/Programacion_lineal_taller2.ipynb
@@ -1264,20 +1264,16 @@
         "              [6,4,3,5,8],\n",
         "              [9,7,4,3,4]])\n",
         "# Restricciones de produccion \n",
-        "b6 = np.array([500,500,500])\n",
-        "\n",
-        "cf = np.array([1000,1000,1000])\n",
-        "\n",
-        "b6_2 = np.array([80,270,250, 160, 180])\n",
+        "Restb6 = np.array([500,500,500])\n",
+        "M6 = np.array([1000,1000,1000])\n",
+        "Funcióndemanda6= np.array([80,270,250, 160, 180])\n",
         "\n",
         "# Minimizar la ganancia, en base a las restricciones\n",
         "x= cp.Variable((3,5), nonneg=True)\n",
         "y= cp.Variable(3, boolean=True)\n",
-        "objetivo= cp.Minimize(cp.sum(cp.multiply(c6,x))+cp.sum(cp.multiply(cf,y)))\n",
+        "objetivo= cp.Minimize(cp.sum(cp.multiply(c6,x)))\n",
         "\n",
-        "Restricciones= [cp.sum(x[0,:])<=500,cp.sum(x[1,:])<=500,cp.sum(x[2,:])<= 500, cp.sum(x[:,0])==b6_2[0],\n",
-        "                cp.sum(x[:,1])==b6_2[1], cp.sum(x[:,2])==b6_2[2], cp.sum(x[:,3])==b6_2[3],\n",
-        "                cp.sum(x[:,4])==b6_2[4], cp.sum(y)==2]\n",
+        "Restricciones= [cp.sum(x,axis=1)<=M6 @ y, cp.sum(x,axis=0)==Funcióndemanda6, cp.sum(y*M6)>=cp.sum(Funcióndemanda6)]\n",
         "\n",
         "Prob = cp.Problem(objetivo, Restricciones)\n",
         "Prob.solve()\n",
@@ -1288,21 +1284,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "013465b8-efc1-4ad5-91bf-bbd858d8d93a"
+        "outputId": "75fe8061-ab93-4f3a-98d0-dd574d89610e"
       },
-      "execution_count": 70,
+      "execution_count": 72,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.9/dist-packages/cvxpy/expressions/expression.py:593: UserWarning: \n",
+            "This use of ``*`` has resulted in matrix multiplication.\n",
+            "Using ``*`` for matrix multiplication has been deprecated since CVXPY 1.1.\n",
+            "    Use ``*`` for matrix-scalar and vector-scalar multiplication.\n",
+            "    Use ``@`` for matrix-matrix and matrix-vector multiplication.\n",
+            "    Use ``multiply`` for elementwise multiplication.\n",
+            "This code path has been hit 1 times so far.\n",
+            "\n",
+            "  warnings.warn(msg, UserWarning)\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 80.,  20.,  -0.,  -0.,  -0.],\n",
-              "       [ -0., 250., 250.,  -0.,  -0.],\n",
+              "array([[ 80.,  -0.,  -0.,  -0.,  -0.],\n",
+              "       [ -0., 270., 250.,  -0.,  -0.],\n",
               "       [ -0.,  -0.,  -0., 160., 180.]])"
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 72
         }
       ]
     },
